<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/img_viewLogin"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.15"
        android:src="@drawable/carita_tin2"
        />

    <EditText
        android:id="@+id/edit_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/usuario"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/white"
        android:inputType="textEmailAddress"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@id/img_viewLogin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55"
        android:textColorHint="@color/white"
        />

    <EditText
        android:id="@+id/edit_paswd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/contrasena"
        android:textColor="@color/white"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@id/img_viewLogin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.62"
        android:textColorHint="@color/white"
        />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintVertical_bias="0.7"
        android:text="@string/loginBtn"
        />

    <TextView
        android:id="@+id/tv_omitir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.80"
        android:layout_marginHorizontal="10dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/omitirLogin"

        />

</androidx.constraintlayout.widget.ConstraintLayout>