<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    tools:context=".ui.perfil.Perfil">


    <ScrollView
        android:id="@+id/scrollPerfil"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <androidx.cardview.widget.CardView
               android:id="@+id/viewAvatarUsuario"
               android:layout_width="200dp"
               android:layout_height="200dp"
               android:layout_alignParentTop="true"
               android:layout_centerHorizontal="true"
               android:layout_marginTop="10dp"
               app:cardElevation="12dp"
               app:cardCornerRadius="100dp">

               <ImageView
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:id="@+id/userPhoto"
                   android:src="@drawable/carita_tin2"/>

           </androidx.cardview.widget.CardView>

           <TextView
               android:id="@+id/tv_nombreUsuario"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/nombreUsuario"
               android:layout_below="@+id/viewAvatarUsuario"
               android:textColor="@color/white"
               android:layout_centerHorizontal="true"
               android:layout_marginTop="10dp"/>

           <TextView
               android:id="@+id/tv_correoUsuario"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/correoUsuario"
               android:textColor="@color/white"
               android:layout_below="@+id/tv_nombreUsuario"
               android:layout_centerHorizontal="true"
               android:layout_marginTop="5dp"
               android:textSize="10dp"/>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="20dp"
               android:orientation="vertical"
               android:layout_below="@+id/tv_correoUsuario">

               <androidx.recyclerview.widget.RecyclerView
                   android:id="@+id/cards_perfil"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:padding="12dp"
                   android:layout_marginBottom="40dp"
                   />
           </LinearLayout>

       </RelativeLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/ViewLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_login"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>